--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.php [NC,L]
-
-ErrorDocument 404 http://localhost/pressx
+ErrorDocument 404 'No Page Found'
+#ErrorDocument 404 http://localhost/pressx
